# JEE

./: .env.example  .gitignore  DESIGN_PRD.md  Details  README.md  add_member.json  admin_cred.json  admin_login.json  commands.txt  e2e-test.mjs  load-test-sustained.mjs  load-test.mjs  package-lock.json  package.json  railway.toml  render.yaml  session-ses_1811.md  start_backend.bat  start_servers.ps1  test-prisma.mjs  vercel.json
.commandcode/taste/: taste.md
android-app/: .gitignore  README.md  build.gradle  settings.gradle.kts  symbols.txt
android-app/app/: build.gradle.kts
android-app/app/src/main/cpp/: CMakeLists.txt  llama-jni.cpp
android-app/app/src/main/cpp/llama.cpp/install/lib/cmake/ggml/: ggml-config.cmake
android-app/app/src/main/cpp/llama.cpp/install/lib/cmake/llama/: llama-config.cmake
android-app/app/src/main/cpp/llama.cpp/install/lib/pkgconfig/: llama.pc
app/: layout.tsx
app/(dashboard)/: layout.tsx  page.tsx
apps/backend/: .env.example  .neon  dummy_questions.xlsx  package.json  test-prisma.cjs  test-prisma.ts  test-prisma2.ts  test-prisma3.ts  tsconfig.json
apps/frontend/: .neon  next.config.ts  package.json  proxy.ts
backend/lib/: db.ts  logger.ts  student.ts
components/: Topbar.tsx
components/dashboard/: AnalyticsChart.tsx  DailyChallenge.tsx
components/exam/: Keypad.tsx  MathRenderer.tsx  QuestionContent.tsx  QuestionPalette.tsx
design_app/: script.js  style.css
f/: index.html  script.js  style.css
frontend/lib/: logger.ts
lib/: mock-data.ts  utils.ts
prisma/: dev.db  schema.prisma  seed.ts
shared/: package.json
(+206 files in other folders)
